--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    // Alias
+    "paths": {
+      "@services/*": ["src/app/_core/services/*"],
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
